samples/_failures_safe/1761500243_f4d39f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e58832e9.c: In function ‘main’:
./samples/SAFE/__tmp_e58832e9.c:173:5: error: expected expression at end of input
  173 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_e58832e9.c:173:5: error: expected declaration or statement at end of input
